Add connection timeout and improve WebSocket client robustness
- Implement waitForConnection method with timeout
- Add reconnection logic with exponential backoff
- Implement heartbeat mechanism
- Improve error handling and logging
- Refactor subscription management